# RECIST_SUP_S1

./: .gitignore  calc_aug.py  calc_chara.py  calc_metrics.py  esmo_lesion_analysis.py  lesion_analysis.py  pyproject.toml  scale_aud.py
data/excel/: Merged_2016-2022_Transferred_20221124.csv  data_result_250422.xlsx  patients_data.csv
data/pred_aug_npz/: 1.npz  1.rotaug.-10.npz  1.rotaug.-16.npz  1.rotaug.-17.npz  1.rotaug.-18.npz  1.rotaug.-24.npz  1.rotaug.-27.npz  1.rotaug.-28.npz  1.rotaug.-29.npz  1.rotaug.-34.npz  1.rotaug.-37.npz  1.rotaug.-38.npz  1.rotaug.-39.npz  1.rotaug.-45.npz  1.rotaug.-8.npz  1.rotaug.12.npz  1.rotaug.14.npz  1.rotaug.19.npz  1.rotaug.21.npz  1.rotaug.22.npz  1.rotaug.26.npz  1.rotaug.29.npz  1.rotaug.34.npz  1.rotaug.36.npz  1.rotaug.4.npz  1.rotaug.42.npz  1.rotaug.43.npz  1.rotaug.44.npz  1.rotaug.5.npz  1.rotaug.7.npz  1.scaleaug.-11.npz  1.scaleaug.-12.npz  1.scaleaug.-16.npz  1.scaleaug.-17.npz  1.scaleaug.-20.npz  1.scaleaug.-21.npz  1.scaleaug.-25.npz  1.scaleaug.-29.npz  1.scaleaug.-3.npz  1.scaleaug.-30.npz  (+213467 more)
data/pred_npz/: 10.npz  100.npz  1000.npz  1001.npz  1003.npz  1006.npz  1007.npz  101.npz  1017.npz  1018.npz  1019.npz  102.npz  1020.npz  1024.npz  1025.npz  1026.npz  1027.npz  1028.npz  1029.npz  103.npz  1031.npz  1032.npz  1035.npz  1036.npz  1037.npz  1038.npz  1040.npz  1041.npz  1042.npz  1044.npz  1045.npz  1047.npz  1048.npz  105.npz  1052.npz  1053.npz  (+1307 more)
esmo_supp/: make_png.ipynb
recist_sup_s1/: calculate_aur_dice.py  calculate_dice.ipynb  hash_id.ipynb  test_hash_id.py
utils/: calculate.py  utils.py
(+29 files in other folders)
