[project]
name = "recist-sup-s1"
version = "0.1.0"
description = ""
authors = [
    {name = "rshibaki",email = "ryota.shibaki@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.29.5,<7.0.0)",
    "ipywidgets (>=8.1.5,<9.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "pydicom (>=3.0.1,<4.0.0)",
    "hashids (>=1.3.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "ace-tools (>=0.0,<0.1)",
    "monai (>=1.4.0,<2.0.0)",
    "natsort (>=8.4.0,<9.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "seaborn (>=0.13.2,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
